{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 370,
  "lineage": "41a56889-827d-48ee-e599-8c2741562a64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-New-nov",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:internet-gateway/igw-0bca5a27c12f45cf4",
            "id": "igw-0bca5a27c12f45cf4",
            "owner_id": "369399351045",
            "tags": {
              "Name": "New-VPC-nov"
            },
            "tags_all": {
              "Name": "New-VPC-nov"
            },
            "vpc_id": "vpc-0393bad0b4a45a2ce"
          },
          "dependencies": [
            "aws_vpc.New-VPC-nov"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "routetbass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bca5a27c12f45cf4",
            "id": "r-rtb-05f40c6a8d074b0881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05f40c6a8d074b088",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-New-nov",
            "aws_route_table.Route-Nov-Pub1",
            "aws_vpc.New-VPC-nov"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Route-Nov-Prv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:route-table/rtb-05d4030202fb0d948",
            "id": "rtb-05d4030202fb0d948",
            "owner_id": "369399351045",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Route-Nov-Prv1"
            },
            "tags_all": {
              "Name": "Route-Nov-Prv1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0393bad0b4a45a2ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.New-VPC-nov"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Route-Nov-Pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:route-table/rtb-05f40c6a8d074b088",
            "id": "rtb-05f40c6a8d074b088",
            "owner_id": "369399351045",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Route-Nov-Pub1"
            },
            "tags_all": {
              "Name": "Route-Nov-Pub1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0393bad0b4a45a2ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.New-VPC-nov"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetbass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f50820072cf86f9f",
            "route_table_id": "rtb-05f40c6a8d074b088",
            "subnet_id": "subnet-0875dd6cf2d264ac2"
          },
          "dependencies": [
            "aws_route_table.Route-Nov-Pub1",
            "aws_subnet.Sub-Nov-Pub1",
            "aws_vpc.New-VPC-nov"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetbass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e30b8f2c2a20399",
            "route_table_id": "rtb-05d4030202fb0d948",
            "subnet_id": "subnet-023966881798ef76b"
          },
          "dependencies": [
            "aws_route_table.Route-Nov-Prv1",
            "aws_subnet.Sub-Nov-Prv1",
            "aws_vpc.New-VPC-nov"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Sub-Nov-Prv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:subnet/subnet-023966881798ef76b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023966881798ef76b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369399351045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub-Nov-Prv1"
            },
            "tags_all": {
              "Name": "Sub-Nov-Prv1"
            },
            "vpc_id": "vpc-0393bad0b4a45a2ce"
          },
          "dependencies": [
            "aws_vpc.New-VPC-nov"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Sub-Nov-Pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:subnet/subnet-0875dd6cf2d264ac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0875dd6cf2d264ac2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "369399351045",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Sub-Nov-Pub1"
            },
            "tags_all": {
              "Name": "Sub-Nov-Pub1"
            },
            "vpc_id": "vpc-0393bad0b4a45a2ce"
          },
          "dependencies": [
            "aws_vpc.New-VPC-nov"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "New-VPC-nov",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:369399351045:vpc/vpc-0393bad0b4a45a2ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b18ac225c39802e6",
            "default_route_table_id": "rtb-0eb7f26b28c08e51d",
            "default_security_group_id": "sg-0e7ea017a7c038ebd",
            "dhcp_options_id": "dopt-0524fd0cb1f7bbf60",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0393bad0b4a45a2ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb7f26b28c08e51d",
            "owner_id": "369399351045",
            "tags": {
              "Name": "New-VPC-nov"
            },
            "tags_all": {
              "Name": "New-VPC-nov"
            }
          }
        }
      ]
    }
  ]
}